# rust-waapi-client

./: .gitmodules  Cargo.toml  LICENSE  README.md
examples/: get_info.rs
src/: api.rs  lib.rs  main.rs  types.rs  waapi_client.rs  waapi_function_api.rs  waapi_topics_api.rs
src/types/: waapi-types.rs
tools/: README.md  generate_api_rs.py  get_waapi_functions.py  waapi_functions.txt  waapi_topics.txt
